--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,14 @@
-button {
-    background-color: #0c80f3;
-    border: 6px solid #0ff166;
-    border-radius: 10px;
-    width: 150px;
-  }
-  
-  select {
-    display: block;
-    margin-bottom: 20px;
-  }
-  
+.label_huge {
+font-weight: bolder;
+font-size: 2em;
+font-family: Arial, Helvetica, sans-serif;
+color: rgb(237, 136, 21);
+}
+
+#total {
+  color: white;
+}
+
+body {
+  background-color: rgb(191, 188, 184);
+}
